49 remove unnecessary code (#50)