@@ -5,16 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.npt</groupId>
-    <artifactId>NetworkPacketTracer</artifactId>
+    <artifactId>GraphicalNetworkPacketTracer</artifactId>
     <version>1.0</version>
-    <name>NetworkPacketTracer</name>
+    <name>GraphicalNetworkPacketTracer</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>21</java.version>
         <maven.compiler.release>${java.version}</maven.compiler.release>
         <mainClass>org.npt.Launch</mainClass>
-        <output.jar>NetworkPacketTracer-1.0.jar</output.jar>
+        <output.jar>gnpt-1.0</output.jar>
 
         <!-- JavaFX -->
         <javafx.version>21.0.8-ea+2</javafx.version>
@@ -350,32 +350,6 @@
                     </argLine>
                     <includes>
                         <include>**/*UnitTest.java</include>
-                    </includes>
-                    <systemPropertyVariables>
-                        <java.awt.headless>false</java.awt.headless>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven.failsafe.plugin}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <argLine>
-                        --module-path ${java.fx.lib.path}
-                        --add-modules javafx.controls,javafx.fxml,javafx.swing
-                        --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
-                    <includes>
-                        <include>**/*IT.java</include>
                     </includes>
                     <systemPropertyVariables>
                         <java.awt.headless>false</java.awt.headless>
